<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".MainActivity">



    
<androidx.cardview.widget.CardView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/blanc"
    app:cardCornerRadius="25sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:cardElevation="50sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="422dp"
            android:layout_height="85dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/text_connexion"
            android:textColor="@color/noir"
            android:textSize="35sp"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/text_info"
            android:gravity="center"
            android:textColor="@color/noir"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_height="wrap_content">

        </TextView>

        <!--erreur a afficher dans le texteview si l'utilisateur a renseigner le bon mot de passe ou pas, l'erreur a ete masquer par le mot gone-->

        <TextView
            android:id="@+id/errorConnectAccountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/text_erreur"
            android:textColor="@color/rouge"
            android:gravity="center"
            android:textSize="20dp"
            android:visibility="gone"
            ></TextView>
        <!--fin erreur a afficher dans le texteview si l'utilisateur a renseigner le bon mot de passe ou pas-->

        <!--notre premier champ-->
<EditText
    android:id="@+id/usernameEditText"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="35dp"
    android:background="@color/blanc_gris"
    android:hint="@string/text_username"
    android:padding="10dp"


    ></EditText>
        <!--fin premier champ-->

        <!--deuxieme champ-->
<EditText
    android:id="@+id/passwordEditText"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="35dp"
    android:background="@color/blanc_gris"
    android:hint="@string/text_password"
    android:padding="10dp"
    android:inputType="textPassword"


    ></EditText>
        <!--fin deuxieme champ-->


        <TextView
            android:id="@+id/createAccountBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_creercompte"
            android:gravity="center"
            android:textColor="@color/rouge"
            android:textSize="18dp"
            android:layout_marginTop="35dp"
            ></TextView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <Button
                android:id="@+id/connectBtn"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:backgroundTint="@color/noir"
                android:textColor="@color/blanc"
                android:layout_marginLeft="111dp"
                android:layout_marginRight="100dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/text_connexion"
                android:layout_gravity="center"
                ></Button>
        </LinearLayout>




    </LinearLayout>

</androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>